--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Interactive Portfolio</title>
+  <link rel="preload" href="css/styles.css" as="style">
   <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body class="light">
@@ -54,7 +55,7 @@
         <button id="reloadBtn" class="btn-outline">Reload Data</button>
       </div>
 
-      <div id="status" class="status" aria-live="polite"></div>
+      <div id="status" class="status" role="status" aria-live="polite"></div>
       <ul id="projectList" class="grid"></ul>
       <template id="projectItemTemplate">
         <li class="card reveal">
@@ -92,7 +93,7 @@
           <small class="error"></small>
         </div>
         <button class="btn" id="sendBtn" type="submit">Send</button>
-        <div id="formStatus" class="status"></div>
+        <div id="formStatus" role="status" class="status"></div>
       </form>
     </section>
   </main>
